--- a/packages/core/src/components/tk-dropdown/tk-dropdown.scss
+++ b/packages/core/src/components/tk-dropdown/tk-dropdown.scss
@@ -9,7 +9,7 @@ tk-dropdown {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 800;
     width: max-content;
     max-height: 300px;
     overflow-y: auto;
