--- a/packages/core/src/components/tk-editor/tk-editor.scss
+++ b/packages/core/src/components/tk-editor/tk-editor.scss
@@ -245,7 +245,7 @@
 
                   &:focus {
                     position: relative;
-                    z-index: 1;
+                    z-index: 100;
                     outline: none;
                   }
 
@@ -536,6 +536,6 @@
     bottom: 0;
     pointer-events: none;
     position: absolute;
-    z-index: 2;
+    z-index: 200;
   }
 }
