--- a/packages/core/src/components/tk-toggle/tk-toggle.scss
+++ b/packages/core/src/components/tk-toggle/tk-toggle.scss
@@ -153,7 +153,7 @@
     opacity: 0;
     cursor: pointer;
     margin: 0;
-    z-index: 2;
+    z-index: 200;
 
     &:checked+.tk-toggle-thumb {
       transform: translateX(28px);
