--- a/packages/core/src/global/sass/components/index.scss
+++ b/packages/core/src/global/sass/components/index.scss
@@ -8,7 +8,7 @@
     border: 1px solid var(--border-light);
     background-color: var(--static-light);
     padding: 8px;
-    z-index: 1400;
+    z-index: 800;
     box-shadow: var(--effect-1-default-base);
     display: flex;
     flex-direction: column;
